Feat: Implement edit and list product in Inventory
